feat: adicionado página de minha conta

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
@@ -72,7 +72,7 @@ else if (TempData["SuccessMessage"] != null)
                 <div class="container">
                     <div class="row mb-3">
                         <div class="col-md-6 d-flex justify-content-start">
-                            <a class="btn btn-dark fw-normal shadow-none" asp-controller="Auth" asp-action="Register">
+                            <a class="btn btn-dark fw-normal shadow-none" asp-controller="Animal" asp-action="Register">
                                 <img style="width: 25px" src="/Images/addition.svg" alt=""> Novo Pet
                             </a>
                         </div>
@@ -146,7 +146,7 @@ else if (TempData["SuccessMessage"] != null)
                 <div class="container">
                     <div class="row mb-3">
                         <div class="col-md-6 d-flex justify-content-start">
-                            <a class="btn btn-dark fw-normal shadow-none" asp-controller="Auth" asp-action="Register">
+                            <a class="btn btn-dark fw-normal shadow-none" asp-controller="Animal" asp-action="Register">
                                 <img style="width: 25px" src="/Images/addition.svg" alt=""> Novo Pet
                             </a>
                         </div>
