--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Order/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Order/Index.cshtml
@@ -159,14 +159,8 @@ else
     <div class="container-fluid text-black py-3">
         <br>
         <h2 class="text-center text-muted" style="font-size: 23px; font-weight: normal;">
-            @TempData["NotFoundSupplier"]
+            @TempData["NotFoundOrderMessage"]
         </h2>
-    </div>
-    <div class="d-flex justify-content-center align-items-center">
-        <br>
-        <a class="btn btn-dark fw-normal shadow-none" asp-controller="Supplier" asp-action="Register">
-            Adicionar Fornecedor
-        </a>
     </div>
 }
 
