--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Update.cshtml
@@ -61,14 +61,11 @@
     <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Animal" asp-action="Update" method="post">
         <input type="hidden" asp-for="@Model.Id">
         <input type="hidden" asp-for="@Model.UserId">
-        @* <input type="hidden" asp-for="@Model.RaceName"> *@
-        @* <input type="hidden" asp-for="@Model.CategoryTitle"> *@
         <input type="hidden" asp-for="@Model.ImageUrl">
 
         @if (Model.CategoryId == 0)
         {
             <input type="hidden" asp-for="@Model.CategoryId">
-            @* <input type="hidden" asp-for="@Model.RaceId"> *@
         }
 
         <div class="col-md-6">
@@ -89,18 +86,6 @@
             <span asp-validation-for="Gender" class="text-danger"></span>
         </div>
 
-        @* <div class="col-md-6"> *@
-        @*     <label asp-for="@Model.RaceId" class="form-label">Raça <span style="color: red;">*</span></label> *@
-        @*     <select asp-for="@Model.RaceId" class="form-select shadow-none"> *@
-        @*         <option value="@Model.RaceId" disabled selected>@Model.RaceName</option> *@
-        @*         @foreach (var race in Model.Races) *@
-        @*         { *@
-        @*             <option value="@race.Id">@race.Name</option> *@
-        @*         } *@
-        @*     </select> *@
-        @*     <span asp-validation-for="RaceId" class="text-danger"></span> *@
-        @* </div> *@
-
         <div class="col-md-6">
             <label asp-for="@Model.RaceName" class="form-label">Raça<span style="color: red;">*</span></label>
             <input asp-for="@Model.RaceName" type="text" class="form-control shadow-none" placeholder="Digite a raça">
@@ -115,7 +100,7 @@
         <div class="col-md-8">
             <label asp-for="@Model.CategoryId" class="form-label">Categoria <span style="color: red;">*</span></label>
             <select asp-for="@Model.CategoryId" class="form-select shadow-none">
-                <option value="@Model.CategoryId">@Model.CategoryTitle</option>
+                <option value="@Model.CategoryId" selected disabled>@Model.CategoryTitle</option>
                 @foreach (var category in Model.Categories)
                 {
                     <option value="@category.Id">@category.Title</option>
